# agenticai

./: .gitignore  README.md
apr26/langgraph/hello_langgraph/: conditional.py  langgraph.json  parallel.py  partial.py  partial_parallel.py  pyproject.toml
apr26/projects/customer_care_agent/: database.py  graph.py  nodes.py  pyproject.toml  sql_agent_service.py  ticket_repoistory.py  utils.py
apr26/projects/customer_care_agent_final/: .gitignore  Claude.md  README.md  database.py  docker-compose.yml  graph.py  main.py  nodes.py  pyproject.toml  schemas.py  sql_agent_service.py  state.py  ticket_repository.py
apr26/projects/customer_care_agent_final/tests/: conftest.py  test_api_workflow.py  test_logic.py
aug25/indexing_pipeline/: pyproject.toml
aug25/indexing_pipeline/notebooks/: generation_pipeline_intro.ipynb  loaders.ipynb  vectordb-querying.ipynb
aug25/kb_articles_rag/: main.py  pyproject.toml
aug25/kb_articles_rag/notebooks/: chaining.ipynb  embeddings.ipynb  experiments.ipynb  utils.py
aug25/kb_articles_rag/notebooks/data/: Sachin_Tendulkar_Biography.txt  Samrat_Ashoka_History.txt  article_001_ci_cd_pipeline.txt  short_stories.txt  socialmediapolicy.txt
aug25/kb_articles_rag/notebooks/templates/: config.yaml  oneliner.txt  oneliner.yaml
aug25/kb_articles_rag/notebooks/templates/v1.1/: oneliner.yaml  supportagent.yaml
aug25/kb_articles_rag_prd/: pyproject.toml
aug25/lttechworld_rag/: common.py  langgraph.json  main.py  pyproject.toml  simple.py  test.ipynb
aug25/lttechworld_rag/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
aug25/lttechworld_rag/data/: ltttechworld_catalog.csv  ltttechworld_faq.csv  ltttechworld_troubleshooting.csv
aug25/lttechworld_rag/utils/: ingest_data_into_once_collection.py
aug25/lttechworld_rag/vector_db/: chroma.sqlite3
aug25/streamlit_trails/: main.py  pyproject.toml
aug25/using_langgraph/: basic.ipynb  indexer.py  langgraph.json  main.py  pyproject.toml  supervisor_agentic.py  test.ipynb
aug25/using_langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
aug25/using_langgraph/vector_store/: chroma.sqlite3
aug25/using_llms_directly/: langchain.ipynb  main.py  openai.ipynb  pyproject.toml
aug25/using_ollama/: main.py  ollama_trails.ipynb  pyproject.toml
dec25/huggingface/hello-transformer/: main.py
dec25/mcp/calc_mcp/: calc.py
dec25/mcp/fastmcp_api_demo/: main.py
dec25/mcp/fastmcp_api_demo_again/: Dockerfile  main.py  pyproject.toml
dec25/mcp/fastmcp_http/: README.md  server.py
dec25/mcp/hello_mcp/: hello.json
dec25/mcp/hello_streamable_http/: pyproject.toml  server.py
dec25/mcp/langchain_mcp_client/: http_client.py  main.py  pyproject.toml  server.py
dec25/mcp/mcp-auth-username-password/: README.md  client.py  (+3 more)
jan26/rag/DocumentLoading/sql_data_examples/: experiment.ipynb  main.py  pyproject.toml
july25/hello-deepagents/: main.py  pyproject.toml
july25/mcp-socialmedia/: pyproject.toml
july25/mcp-template/: Dockerfile  docker-compose.yml  pyproject.toml
july25/mcp-template/src/mcp_template/: __init__.py  server.py
july25/sample-fastapi/: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
july25/with-structure/mcp-socialmedia/: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml  pyproject.toml.bak
july25/with-structure/mcp-socialmedia/src/mcp_socialmedia/: __init__.py  server.py
july25/with-structure/mcp-socialmedia/src/mcp_socialmedia/socialmedia/: linkedin.py
july25/with-structure/mcp-socialmedia/src/mcp_socialmedia/utils/: api.py
june25/crm_agent/: langgraph.json  requirements.txt  sample.env
june25/jira_agent/: common.py  requirements.txt  state.py
june25/jira_agent_new/: .env  Dockerfile  langgraph.json  pyproject.toml
june25/langgraph-learning/: pyproject.toml
june26/async_subagent_demo/: AGENTS.md  communications.py  langgraph.json  main.py  pyproject.toml  reasoning.py  schemas.py  tools.py  utils.py
june26/hello-deepagents/: main.py  pyproject.toml
june26/rag/rag_learning_gcp/: documents_document_loaders.ipynb  dominos_rag.py  dominos_sales.db  dominos_simulator.py  dominos_simulator_readme.md  main.py  prompts_models_structured_output.ipynb  pyproject.toml  utils.py
june26/rag/rag_learning_gcp/data/: intro.txt  story.md  story.txt
june26/rag/rag_learning_gcp/simple_rag_knowledge_base/: accounts.txt  refunds.txt  shipping.txt  technical_support.txt
june26/rag/rag_learning_gcp/simple_rag_vs/: chroma.sqlite3
june26/rag/rag_learning_gcp/vectorstores/hello/: chroma.sqlite3
june26/rag_project_experiments/: app.py  chunk_experiment.py  evaluation_experiment.py  evaluation_framework.ipynb  extract.py  image_experiment_caption.py  pyproject.toml  recursive_chunking_learning.py  retrieval_experiment.py  test.py  utils.py
june26/rag_project_experiments/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
june26/understanding-deepagents/: backend1.py  backend2.py  books_search_tools.py  detailed_skills_demo.py  hello_subagent.py  langgraph.json  main.py  prebuilt_pii.py  pyproject.toml  question_paper_agent.py  question_paper_agent_response_format.py  skills_demo.py  test.py  tododemo.py  tool_experiments.ipynb  utils.py  withsimpletools.py
oct25/langgraph/hitl/: email.py  email_hitl.py  langgraph.json  main.py  pyproject.toml
oct25/langgraph/hitl_local_model/: README.md  main.py  pyproject.toml
oct25/langgraph/mailtoner/: gaps.ipynb  historian.py  langgraph.json  langmem.ipynb  main.py  memory.ipynb  pa.py  pyproject.toml  react.ipynb  reducers.ipynb  semanticmemory.ipynb  stats.ipynb  subgraph.py  supervisor.ipynb  test.sqlite-shm  test.sqlite-wal  test1.sqlite-shm  test1.sqlite-wal  testing.sqlite-shm  testing.sqlite-wal  threadsncheckpointers.ipynb  toner.py  tools.ipynb
sep25/cloud_services/: main.py  pyproject.toml
(+272 files in other folders)
