[project]
name = "mcp-socialmedia"
version = "0.1.0"
description = "The Model Context protocol for social media postings"
readme = "README.md"
authors = [
    { name = "shaikkhajaibrahim", email = "shaikkhajaibrahim@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "linkedin-api-client>=0.3.0",
    "mcp[cli]>=1.12.2",
    "requests>=2.32.4",
]

[project.scripts]
mcp-socialmedia = "mcp_socialmedia:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
